<resources>
    <string name="app_name">Organization &amp; Money</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Salario_Mensal">Ex: Salário Mensal</string>
    <string name="Salario">Ex: Salário</string>
    <string name="exemplo_data">Ex: 19/09/2020</string>
    <string name="exemplo_valor">R$ 00.00</string>
    <string name="todo">TODO</string>
</resources>